--- a/tutorials/l_master.ipynb
+++ b/tutorials/l_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6f30cd88",
+   "id": "6ac089e8",
    "metadata": {},
    "source": [
     "# Custom Time Evolution\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0244780",
+   "id": "1f919e46",
    "metadata": {},
    "source": [
     "*Note*: Please consult the tutorial on potentials first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1fbd14f8",
+   "id": "61c6f2fe",
    "metadata": {},
    "source": [
     "*Note*: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency."
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a43e3801",
+   "id": "58c51d35",
    "metadata": {},
    "source": [
     "## Hamiltonian"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c940c1e2",
+   "id": "873a18df",
    "metadata": {},
    "source": [
     "When calling the integration for the master equation, you can give an optional argument, `hamiltonian`. As already discussed, this argument represents a Hamiltonian as a dictionary of functions."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba711ae4",
+   "id": "7341e1cf",
    "metadata": {},
    "source": [
     "Up to now, we  wanted to use custom potentials, so we  added them to the dictionary. Let's look more closely at what is going on by considering a flake under plane wave illumination."
@@ -53,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a5ee34f4",
+   "id": "30c65755",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T13:12:56.145148Z",
-     "iopub.status.busy": "2025-02-03T13:12:56.144977Z",
-     "iopub.status.idle": "2025-02-03T13:12:59.093619Z",
-     "shell.execute_reply": "2025-02-03T13:12:59.093122Z"
+     "iopub.execute_input": "2025-02-03T13:16:46.737890Z",
+     "iopub.status.busy": "2025-02-03T13:16:46.737713Z",
+     "iopub.status.idle": "2025-02-03T13:16:49.924400Z",
+     "shell.execute_reply": "2025-02-03T13:16:49.923836Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3ca68bd",
+   "id": "8dcb0b9e",
    "metadata": {},
    "source": [
     "As discussed, the default Hamiltonian  has three terms:"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a6f7b4f",
+   "id": "af76991d",
    "metadata": {},
    "source": [
     "1. a bare Hamiltonian.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c08bafcf",
+   "id": "a116debb",
    "metadata": {},
    "source": [
     "Each of these terms is represented by a function. Every function accepts the following three arguments:"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4de69d79",
+   "id": "4ec60d98",
    "metadata": {},
    "source": [
     "1. time\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e746505",
+   "id": "6ab95644",
    "metadata": {},
    "source": [
     "Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list `func_list`. "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff5a9c1e",
+   "id": "f98528c6",
    "metadata": {},
    "source": [
     "The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so `H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )`."
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36f50042",
+   "id": "1ddf2149",
    "metadata": {},
    "source": [
     "## Argument Objects"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76e84038",
+   "id": "83831dde",
    "metadata": {},
    "source": [
     "The `args` object is a named tuple (like a struct in the C programming language) and we can inspect its contents by looking at its fields "
@@ -150,13 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e93c7562",
+   "id": "4d0cf9e0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T13:12:59.095722Z",
-     "iopub.status.busy": "2025-02-03T13:12:59.095439Z",
-     "iopub.status.idle": "2025-02-03T13:13:00.936141Z",
-     "shell.execute_reply": "2025-02-03T13:13:00.935632Z"
+     "iopub.execute_input": "2025-02-03T13:16:49.926697Z",
+     "iopub.status.busy": "2025-02-03T13:16:49.926246Z",
+     "iopub.status.idle": "2025-02-03T13:16:51.952055Z",
+     "shell.execute_reply": "2025-02-03T13:16:51.951432Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42f24138",
+   "id": "56576a2d",
    "metadata": {},
    "source": [
     "We can access individual entries"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "7b4e170a",
+   "id": "f047b2ad",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T13:13:00.937900Z",
-     "iopub.status.busy": "2025-02-03T13:13:00.937716Z",
-     "iopub.status.idle": "2025-02-03T13:13:00.941392Z",
-     "shell.execute_reply": "2025-02-03T13:13:00.940763Z"
+     "iopub.execute_input": "2025-02-03T13:16:51.953929Z",
+     "iopub.status.busy": "2025-02-03T13:16:51.953743Z",
+     "iopub.status.idle": "2025-02-03T13:16:51.957380Z",
+     "shell.execute_reply": "2025-02-03T13:16:51.956731Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9271434",
+   "id": "4d958105",
    "metadata": {},
    "source": [
     "The `args` object is a lower-level representation of the OrbitalList object: a collection of numbers and arrays that represent the structure."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42d4b259",
+   "id": "66093306",
    "metadata": {},
    "source": [
     "The evolution is determined by the Hamiltonian. It is given by an addition of functions. Each of these functions depends on time, the density matrix and the simulated structure. So, a single function representing a term in the Hamiltonian has the following signature `term: time, density_matrix, args -> matrix`."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cfc19de9",
+   "id": "8d41565b",
    "metadata": {},
    "source": [
     "## Computing Terms"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2330be6",
+   "id": "e6098716",
    "metadata": {},
    "source": [
     "Individual terms of the default Hamiltonian can be inspected and since these are functions, applied to arguments. First, consider the bare Hamiltonian"
@@ -241,13 +241,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "70a5a47f",
+   "id": "c3fc8212",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T13:13:00.943288Z",
-     "iopub.status.busy": "2025-02-03T13:13:00.942952Z",
-     "iopub.status.idle": "2025-02-03T13:13:00.984490Z",
-     "shell.execute_reply": "2025-02-03T13:13:00.984016Z"
+     "iopub.execute_input": "2025-02-03T13:16:51.959394Z",
+     "iopub.status.busy": "2025-02-03T13:16:51.959084Z",
+     "iopub.status.idle": "2025-02-03T13:16:52.004737Z",
+     "shell.execute_reply": "2025-02-03T13:16:52.004141Z"
     }
    },
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0ba2a9a",
+   "id": "a294bc0a",
    "metadata": {},
    "source": [
     "The function returns the bare Hamiltonian, independent of the time and density matrix. Let's compute the Coulomb potential at the initial time"
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "72c99e4b",
+   "id": "cae442ab",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T13:13:00.986196Z",
-     "iopub.status.busy": "2025-02-03T13:13:00.986018Z",
-     "iopub.status.idle": "2025-02-03T13:13:01.051874Z",
-     "shell.execute_reply": "2025-02-03T13:13:01.051278Z"
+     "iopub.execute_input": "2025-02-03T13:16:52.006839Z",
+     "iopub.status.busy": "2025-02-03T13:16:52.006320Z",
+     "iopub.status.idle": "2025-02-03T13:16:52.078309Z",
+     "shell.execute_reply": "2025-02-03T13:16:52.077779Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0680d700",
+   "id": "a1fe3313",
    "metadata": {},
    "source": [
     "At the start of the simulation, there is no induced Coulomb potential (all entries in the matrix are zero), because the system is in its ground state."
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23d9921a",
+   "id": "b3e980c2",
    "metadata": {},
    "source": [
     "Last, there is the external potential. Since no transition dipole moments are considered, it will be entirely diagonal in site basis"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "7736f8a9",
+   "id": "6d1eb077",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T13:13:01.053821Z",
-     "iopub.status.busy": "2025-02-03T13:13:01.053467Z",
-     "iopub.status.idle": "2025-02-03T13:13:01.080011Z",
-     "shell.execute_reply": "2025-02-03T13:13:01.079420Z"
+     "iopub.execute_input": "2025-02-03T13:16:52.080645Z",
+     "iopub.status.busy": "2025-02-03T13:16:52.080034Z",
+     "iopub.status.idle": "2025-02-03T13:16:52.109317Z",
+     "shell.execute_reply": "2025-02-03T13:16:52.108710Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da6a1085",
+   "id": "ac3f1184",
    "metadata": {},
    "source": [
     "## Modelling Terms"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f61a3653",
+   "id": "7bc8276d",
    "metadata": {},
    "source": [
     "To include arbitrary terms in the time evolution, we define a function that"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8095611",
+   "id": "ff511c5b",
    "metadata": {},
    "source": [
     "1. Accepts `time, density_matrix, args`\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a01a763c",
+   "id": "aad1060b",
    "metadata": {},
    "source": [
     "Then, we insert it in the dictionary, potentially overwriting a default key."
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f44a664",
+   "id": "01238da3",
    "metadata": {},
    "source": [
     "Let's illustrate this at the example of a custom scalar potential. We want to replace the dipole-gauge coupling $\\vec{E} \\vec{P}$ with a scalar potential representing a plane-wave pulse. Let's define this potential first"
@@ -398,13 +398,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "bb8a5fa3",
+   "id": "f88f8889",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T13:13:01.082027Z",
-     "iopub.status.busy": "2025-02-03T13:13:01.081842Z",
-     "iopub.status.idle": "2025-02-03T13:13:01.085890Z",
-     "shell.execute_reply": "2025-02-03T13:13:01.085427Z"
+     "iopub.execute_input": "2025-02-03T13:16:52.111554Z",
+     "iopub.status.busy": "2025-02-03T13:16:52.111032Z",
+     "iopub.status.idle": "2025-02-03T13:16:52.115391Z",
+     "shell.execute_reply": "2025-02-03T13:16:52.114634Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2eee3cfe",
+   "id": "3ec8ff07",
    "metadata": {},
    "source": [
     "Now, we replace the default potential with our custom term,  as we did before in the case of the pulsed dipole."
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "0b832457",
+   "id": "4c5b49ec",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T13:13:01.087423Z",
-     "iopub.status.busy": "2025-02-03T13:13:01.087246Z",
-     "iopub.status.idle": "2025-02-03T13:13:01.090126Z",
-     "shell.execute_reply": "2025-02-03T13:13:01.089556Z"
+     "iopub.execute_input": "2025-02-03T13:16:52.117214Z",
+     "iopub.status.busy": "2025-02-03T13:16:52.116905Z",
+     "iopub.status.idle": "2025-02-03T13:16:52.119862Z",
+     "shell.execute_reply": "2025-02-03T13:16:52.119403Z"
     }
    },
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "637eda08",
+   "id": "a404beec",
    "metadata": {},
    "source": [
     "To run a time-domain simulation, we  pass the modified Hamiltonian dictionary directly, as demonstrated in the first section"
@@ -457,13 +457,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "473aba6a",
+   "id": "aa47470c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T13:13:01.091898Z",
-     "iopub.status.busy": "2025-02-03T13:13:01.091535Z",
-     "iopub.status.idle": "2025-02-03T13:13:03.590507Z",
-     "shell.execute_reply": "2025-02-03T13:13:03.590025Z"
+     "iopub.execute_input": "2025-02-03T13:16:52.121686Z",
+     "iopub.status.busy": "2025-02-03T13:16:52.121278Z",
+     "iopub.status.idle": "2025-02-03T13:16:54.706490Z",
+     "shell.execute_reply": "2025-02-03T13:16:54.706000Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f494f94a",
+   "id": "11906e1b",
    "metadata": {},
    "source": [
     "## Modelling Dissipators"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7cba676",
+   "id": "dd4c02e0",
    "metadata": {},
    "source": [
     "Dissipators are modelled as functions with the same signature as terms in the Hamiltonian, i.e. to model a custom dissipator"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0270efed",
+   "id": "e5b342f0",
    "metadata": {},
    "source": [
     "1. Define a function `diss : time, density_matrix, args -> jax.Array`\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c42ba1b",
+   "id": "df20d881",
    "metadata": {},
    "source": [
     "You can also get defaults"
@@ -542,13 +542,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "46936f76",
+   "id": "d8520e55",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T13:13:03.592357Z",
-     "iopub.status.busy": "2025-02-03T13:13:03.592173Z",
-     "iopub.status.idle": "2025-02-03T13:13:03.596077Z",
-     "shell.execute_reply": "2025-02-03T13:13:03.595401Z"
+     "iopub.execute_input": "2025-02-03T13:16:54.708655Z",
+     "iopub.status.busy": "2025-02-03T13:16:54.708454Z",
+     "iopub.status.idle": "2025-02-03T13:16:54.711774Z",
+     "shell.execute_reply": "2025-02-03T13:16:54.711311Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f49bc1049a0>}\n"
+      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f572cf109a0>}\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5560987e",
+   "id": "c8114777",
    "metadata": {},
    "source": [
     "NOTE: To pass the dissipator above to the `master_equation` method, you have to specify the relaxation rate again. "
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2006bc95",
+   "id": "3f6f7c67",
    "metadata": {},
    "source": [
     "## Postprocessing"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b754a8a",
+   "id": "a5460141",
    "metadata": {},
    "source": [
     "You can define custom postprocessing. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a85c011e",
+   "id": "cbe50d93",
    "metadata": {},
    "source": [
     "For example, if you are only interested in the occupation of the 0-th state"
@@ -602,13 +602,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "ea1bcf25",
+   "id": "9be6cce7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T13:13:03.598007Z",
-     "iopub.status.busy": "2025-02-03T13:13:03.597661Z",
-     "iopub.status.idle": "2025-02-03T13:13:03.600434Z",
-     "shell.execute_reply": "2025-02-03T13:13:03.599996Z"
+     "iopub.execute_input": "2025-02-03T13:16:54.713697Z",
+     "iopub.status.busy": "2025-02-03T13:16:54.713341Z",
+     "iopub.status.idle": "2025-02-03T13:16:54.716416Z",
+     "shell.execute_reply": "2025-02-03T13:16:54.715845Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -622,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "b5e10626",
+   "id": "82ca0a51",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T13:13:03.601971Z",
-     "iopub.status.busy": "2025-02-03T13:13:03.601799Z",
-     "iopub.status.idle": "2025-02-03T13:13:04.654217Z",
-     "shell.execute_reply": "2025-02-03T13:13:04.653589Z"
+     "iopub.execute_input": "2025-02-03T13:16:54.718268Z",
+     "iopub.status.busy": "2025-02-03T13:16:54.717787Z",
+     "iopub.status.idle": "2025-02-03T13:16:55.784123Z",
+     "shell.execute_reply": "2025-02-03T13:16:55.783540Z"
     }
    },
    "outputs": [
